<resources>
    <string name="app_name">GeniusDispenserRobot</string>

    <!--พารา-->
    <string name="para1">ชื่อสามัญทางยา : Paracetamol</string>
    <string name="para2">สรรพคุณ : ใช้บรรเทาปวดลดไข้บรรเทาปวดศีรษะ ปวดหู ปวด- ประจำเดือน ปวดหลัง ปวดข้อ เป็นต้น</string>
    <string name="para3">เด็ก : ครั้งละ 1 เม็ดผู้ใหญ่ : ครั้งละ 2 เม็ด**ถ้าไม่หาย ให้ซ้ำได้ทุก 4-6 ชั่วโมง เมื่ออาการจะทุเลา แล้วให้หยุดยา**</string>
    <string name="para4">ข้อควรระวัง : ถ้าใช้เกินขนาด อาจมี พิษต่อตับ ทำให้ตับทำงานไม่ได้ หรือตับวาย ถึงตายได้**ดังนั้น ในเด็กไม่ควรใช้เกินวันละ1.200 มิลลิกรัม และผู้ใหญ่ไม่ควรเกินวันละ 4 กรัม</string>

    <!--คลอเฟนิรามีน-->
    <string name="chlor1">ชื่อสามัญทางยา : Chlorpheniramine</string>
    <string name="chlor2">สรรพคุณ : ใช้รักษาอาการแพ้ต่างๆ เช่น แพ้อากาศจากไข้หวัด ผื่นคัน ลมพิษ</string>
    <string name="chlor3">เป็นยาบรรเทาแพ้หรือยาต้านฮิสตามีนในกลุ่มอัลไคลามีน (Alkylamine) ผู้ใหญ่และเด็กอายุ 13 ปีขึ้นไป ให้รับประทานยาครั้งละ 1 เม็ด วันละ 2-4 ครั้ง หรือทุก 4-6 ชั่วโมง เด็กอายุ 2-12 ปี ให้รับประทานยาวันละ 0.35 มิลลิกรัม/น้ำหนักตัว 1 กิโลกรัม โดยแบ่งให้วันละ 2-4 ครั้ง (ก่อนทานยาทุกครั้งควรปรึกษาแพทย์และเภสัชกร)</string>
    <string name="chlor4">ข้อควรระวัง : ยาคลอเฟนิรามีน อาจก่อให้เกิด อาการง่วงนอน  ถ่ายปัสสาวะลำบาก การมองเห็นไม่ชัดเจนหลีกเลี่ยงการทำงานกับเครื่องจักรในที่สูง หรือการขับขี่ยวดยานพาหนะ</string>

    <!--ไดเมน"ฮดริเนต-->
    <string name="dimen1">ชื่อสามัญทางยา : Dimenhydrinate 50 mg</string>
    <string name="dimen2">สรรพคุณ : ใช้บรรเทาอาการผิดปกติ เช่น มึนงง คลื่นไส้ อาเจียน หน้าซีด ในขณะ ที่กำลังเดินทางด้วย รถ เรือ เครื่องบินษ</string>
    <string name="dimen3">- ผู้ใหญ่ให้รับประทานเมื่อมีอาการครั้งละ 1-2 เม็ด วันละ 3-4 ครั้ง - เด็กให้รับประทานวันละ 5 มิลลิกรัม/กิโลกรัม โดยแบ่งให้ 4 ครั้ง(ก่อนทานยาทุกครั้งควรปรึกษาแพทย์และเภสัชกร)</string>
    <string name="dimen4">ข้อควรระวัง :
        \n- ไม่ควรใช้ยาแก้เมารถเมาเรือ ใน”เด็กที่มีอายุ น้อยกว่า 2 ปี
        \n- ผู้สูงอายุ สามารถใช้ยาแก้เมารถ เมาเรือ ได้ แต่ควรใช้เมื่อจำเป็นเท่านั้น</string>

    <!--ยาแก้ท้องเสีย-->
    <string name="carbon1">ชื่อสามัญทางยา : Chlorpheniramine</string>
    <string name="carbon2">สรรพคุณ : ใช้รักษาอาการแพ้ต่างๆ เช่น แพ้อากาศจากไข้หวัด ผื่นคัน ลมพิษ</string>
    <string name="carbon3">เป็นยาบรรเทาแพ้หรือยาต้านฮิสตามีนในกลุ่มอัลไคลามีน (Alkylamine) ผู้ใหญ่และเด็กอายุ 13 ปีขึ้นไป ให้รับประทานยาครั้งละ 1 เม็ด วันละ 2-4 ครั้ง หรือทุก 4-6 ชั่วโมง เด็กอายุ 2-12 ปี ให้รับประทานยาวันละ 0.35 มิลลิกรัม/น้ำหนักตัว 1 กิโลกรัม โดยแบ่งให้วันละ 2-4 ครั้ง (ก่อนทานยาทุกครั้งควรปรึกษาแพทย์และเภสัชกร)</string>
    <string name="carbon4">ข้อควรระวัง : ยาคลอเฟนิรามีน อาจก่อให้เกิด อาการง่วงนอน  ถ่ายปัสสาวะลำบาก การมองเห็นไม่ชัดเจนหลีกเลี่ยงการทำงานกับเครื่องจักรในที่สูง หรือการขับขี่ยวดยานพาหนะ</string>



</resources>
