<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_travel_sickness_tablets"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="biz.markgo.dispensergeniusrobot.dispensergeniusrobot.menu.TravelSicknessTabletsActivity"
    android:background="#5e91bf">



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#48749b"
        android:id="@+id/linearLayout4">

        <ImageView
            app:srcCompat="@drawable/previous"
            android:id="@+id/im_back"
            android:layout_weight="1"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_width="95dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:text="ยาไดเมนไฮดริเนต"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView1"
                android:textColor="@android:color/white"
                android:layout_weight="1"
                android:gravity="bottom|center_horizontal"
                android:textSize="24sp"
                android:textStyle="normal|bold" />

            <TextView
                android:text="Dimenhydrinate 50 mg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView2"
                android:textColor="@android:color/white"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/Layout_send"
        android:layout_below="@+id/linearLayout4">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="164dp"
                    app:srcCompat="@drawable/p4"
                    android:id="@+id/imageView4"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:text="@string/dimen1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:background="#48749b" />

                <TextView
                    android:text="@string/dimen2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:background="#48749b" />

                <TextView
                    android:text="@string/dimen3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:background="#48749b" />

                <TextView
                    android:text="@string/dimen4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:background="#48749b" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Layout_send"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/holo_green_dark"
        android:layout_height="55dp">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/remed"
            android:id="@+id/imageView6"
            android:layout_marginLeft="10dp" />

        <Button
            android:text="จ่ายยา"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/bt_send"
            android:textStyle="normal|bold"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_green_dark"
            android:textAlignment="center" />

    </LinearLayout>


</RelativeLayout>
